# hank

./: .gitignore  Cargo.toml
entity/: Cargo.toml
lib/hank-functions/: Cargo.toml
lib/hank-functions/src/: lib.rs
lib/hank-transport/: Cargo.toml
lib/hank-transport/src/: lib.rs
plugin/ping/src/: lib.rs
plugin/pong/src/: lib.rs
plugin/wordle/: Cargo.toml
plugin/wordle/src/: lib.rs  wordle.rs
plugins/ping/: Cargo.toml
plugins/ping/src/: lib.rs
plugins/pong/: Cargo.toml
plugins/pong/src/: lib.rs
src/: cli.rs  conf.rs  functions.rs  hank.rs  main.rs  plugin.rs
