[package]
name = "hank"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
	"plugins/ping",
	"lib/hank-transport",
	"lib/hank-functions",
]

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
confique = "0.2.4"
discord = { git = "https://github.com/SpaceManiac/discord-rs", version = "0.9.0" }
extism = "0.5.2"
extism-convert = "0.2.0"
extism-pdk = "0.3.4"
map-macro = "0.2.6"
serde = "1.0.188"
serde_json = "1.0.107"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
xdg = "2.5.2"

[dependencies.hank-transport]
path = "lib/hank-transport"

[dependencies.hank-functions]
path = "lib/hank-functions"
