[package]
name = "hank"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
	# "entity",
	"migration",
	"lib/hank-transport",
	"plugin/ping",
	"plugin/pong",
	"plugin/wordle",
]

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
confique = "0.2.4"
entity = { path = "entity" }
# extism = "0.5.2"
extism = { git = "https://github.com/extism/extism/" }
map-macro = "0.2.6"
migration = { path = "migration" }
sea-orm = { version = "0.12.6", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
serde = "1.0.188"
serde_json = "1.0.107"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
twilight-cache-inmemory = "0.15.4"
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-model = "0.15.4"
xdg = "2.5.2"

[dependencies.hank-transport]
path = "lib/hank-transport"
