[package]
name = "hank-functions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord = { git = "https://github.com/SpaceManiac/discord-rs", version = "0.9.0" }
extism = "0.5.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

[dependencies.hank-transport]
path = "../hank-transport"
