[package]
name = "hank-transport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
extism-convert = { git = "https://github.com/extism/extism/" }
semver = { version = "1.0.20", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.108"
