[package]
name = "ping"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# extism-pdk = "0.3.4"
extism-pdk = { git = "https://github.com/extism/rust-pdk/" }
map-macro = "0.2.6"
serde = "1.0.188"
serde_json = "1.0.107"

[dependencies.hank-transport]
path = "../../lib/hank-transport"
